# vinz

./: .gitignore  .gitreview  LICENSE  MANIFEST.in  README.md  package.json  requirements.txt  setup.cfg  vinz-shim.user.js  webpack.config.js
flask/: app.py  requirements.txt
flask/static/: vinz.html
vinz/: __init__.py  package.json  setup.py  webpack.config.js
vinz/assets/scripts/: app.js
vinz/assets/scripts/components/change_details/: change_details.html.js  change_details.js
vinz/assets/scripts/components/change_details/change_commit/: change_commit.html.js  change_commit.js
vinz/assets/scripts/components/change_details/change_files/: change_files.html.js  change_files.js
vinz/assets/scripts/components/change_details/change_files/file_bar/: file_bar.html.js  file_bar.js
vinz/assets/scripts/components/change_details/change_log/: change_log.html.js  change_log.js
vinz/assets/scripts/components/change_details/change_reviews/: change_reviews.html.js  change_reviews.js
vinz/assets/scripts/components/change_details/change_reviews/review_box/: review_box.html.js  review_box.js
vinz/assets/styles/: main.scss
vinz/templates/: index.html
vinz/vinz/: __init__.py
vinz/vinz/templates/: base.html  index.html
